--- a/Edu website/index.html
+++ b/Edu website/index.html
@@ -17,7 +17,7 @@
             <li> <a href="#Home">Home</a></li>
             <li> <a href="#Service">Services</a></li>
             <li> <a href="#About">About</a></li>
-            <li> <a href="#Contact">Contact</a></li>
+            <li> <a href="#Contact">Connect</a></li>
         </ul>
         <div class="rightnav" >
             <input type="text" name="search" id="search">
